--- a/TechOnStudy_CMS/TechOnStudy_CMS.csproj
+++ b/TechOnStudy_CMS/TechOnStudy_CMS.csproj
@@ -2540,6 +2540,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbtoppersias_146DataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="dbtoppersias_146DataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbtoppersias_146DataSet5.xsd</DependentUpon>
+    </Compile>
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2799,6 +2804,17 @@
     </None>
     <Content Include="dbtoppersias_146DataSet4.xss">
       <DependentUpon>dbtoppersias_146DataSet4.xsd</DependentUpon>
+    </Content>
+    <Content Include="dbtoppersias_146DataSet5.xsc">
+      <DependentUpon>dbtoppersias_146DataSet5.xsd</DependentUpon>
+    </Content>
+    <None Include="dbtoppersias_146DataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dbtoppersias_146DataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="dbtoppersias_146DataSet5.xss">
+      <DependentUpon>dbtoppersias_146DataSet5.xsd</DependentUpon>
     </Content>
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
